Correccion listado provincias

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://10.90.36.104:3306/agenda_mini
-spring.datasource.username=grupo02
-spring.datasource.password=grupo
+spring.datasource.url=jdbc:mysql://localhost:3306/agenda_mini?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 #Permite conocer los endpoints
